app/display: Expand From Center fails with some modifiers

Fixes https://gitlab.gnome.org/GNOME/gimp/-/work_items/9453

(cherry picked from commit b90315a199d7a809e4455d28e8eb4fa849228513)